# ieee-p3109

./: .ocamlformat  README.md  dune  dune-project  imandrax-prelude.opam  p3109.opam
check-yml/: Manifest.toml  Project.toml  formats.jl  main.jl
check-yml/example/: Configurations.yaml  Constraints.yaml  Kappas.yaml  Profiles.yaml  StandardOperations.yaml
iml2latex/: .gitignore  Makefile  README.md  aug_Add.tex  aug_CompareLessEqual.tex  aug_Cos.tex  aug_Divide.tex  aug_Exp2.tex  aug_Log.tex  aug_Log1p.tex  aug_MaximumFinite.tex  aug_MaximumMagnitudeNumber.tex  aug_MinimumNumber.tex  aug_Softplus.tex  aug_Tanh.tex  aug_abs.tex  aug_add.tex  aug_add_scaled.tex  aug_clamp.tex  aug_compare_equal.tex  aug_compare_greater.tex  aug_compare_greater_equal.tex  aug_compare_less.tex  aug_compare_less_equal.tex  aug_copy_sign.tex  aug_divide.tex  aug_exp.tex  aug_exp2.tex  aug_faa.tex  aug_fma.tex  aug_hypot.tex  aug_is_one.tex  aug_is_sign_minus.tex  aug_is_zero.tex  aug_log.tex  aug_log2.tex  aug_maximum.tex  aug_maximum_finite.tex  aug_maximum_magnitude.tex  aug_maximum_magnitude_number.tex  (+93 more)
implementation/: dune
implementation/test/: dune  test_app.ml
specification/: dune  theorems_sqrt.iml.disabled
specification/test/: dune  enumerations.ml  table.ml  test_app_spec.ml
src/: dune
test/: dune  test_app.ml
test/julia-hex/: .gitignore  Makefile  compare.py  report.txt
test/julia-hex/signed/extended/: binary10se.hex.csv  binary11se.hex.csv  binary12se.hex.csv  binary13se.hex.csv  binary14se.hex.csv  binary2se.hex.csv  binary3se.hex.csv  binary4se.hex.csv  binary5se.hex.csv  binary6se.hex.csv  binary7se.hex.csv  binary8se.hex.csv  binary9se.hex.csv
test/julia-hex/signed/finite/: binary10sf.hex.csv  binary11sf.hex.csv  binary12sf.hex.csv  binary13sf.hex.csv  binary14sf.hex.csv  binary2sf.hex.csv  binary3sf.hex.csv  binary4sf.hex.csv  binary5sf.hex.csv  binary6sf.hex.csv  binary7sf.hex.csv  binary8sf.hex.csv  binary9sf.hex.csv
test/julia-hex/unsigned/extended/: binary10ue.hex.csv  binary11ue.hex.csv  binary12ue.hex.csv  binary13ue.hex.csv  binary14ue.hex.csv  binary2ue.hex.csv  binary3ue.hex.csv  binary4ue.hex.csv  binary5ue.hex.csv  binary6ue.hex.csv  binary7ue.hex.csv  binary8ue.hex.csv  binary9ue.hex.csv
test/julia-hex/unsigned/finite/: binary10uf.hex.csv  binary11uf.hex.csv  binary12uf.hex.csv  binary13uf.hex.csv  binary14uf.hex.csv  binary2uf.hex.csv  binary3uf.hex.csv  binary4uf.hex.csv  binary5uf.hex.csv  binary6uf.hex.csv  binary7uf.hex.csv  binary8uf.hex.csv  binary9uf.hex.csv
