(executable
 (name test_app_spec)
 (modules Test_app_spec)
 (modes byte native)
 (libraries math specification unix theorems containers bignum))

(executable
 (name table)
 (modules Table)
 (modes byte native)
 (libraries math specification unix bignum theorems)
 (preprocess
  (pps ppx_subliner ppx_deriving.std)))
